pipeline/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: modresortswar
  name: modresortswar
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: modresortswar
    weight: 100
